--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-.w3-container {
+.conteiner mt-4 {
     margin-top: 4px;
+  
 }
 form {
     width: 500px;
+
+}
+.row{
+    margin-left:  10%;
+ 
 }
